@@ -24,6 +24,11 @@ libxml-ruby 0.3.8 or greater
 $ ruby extconf.rb
 $ make
 $ sudo make install
+$ sudo make install-extras
+
+`make install' will only install the core of the bridge, while 
+`make install-extras' will install some additional tools such as the rdoc-osa
+utility.
 
 == Support ==
 
