@@ -1,3 +1,13 @@
+2007-03-01  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* extconf.rb,
+	  post-install.rb,
+	  README:
+	Do not try to hack the install task of the generated mkmf Makefile anymore, 
+	as it doesn't seem to work with some previous mkmf revisions. Instead just add
+	a new Makefile task, 'install-extras', and suggest the user to call it in the 
+	README.
+
 2007-02-28  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* src/lib/rbosa.rb,
